--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "styled-components": "^6.0.8"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
